--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,44 @@ ul {
   list-style: none;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+body {
+  margin: 0;
+  font-family: 'Gaegu', cursive;
+}
+
+body.showing-modal {
+  overflow: hidden;
+}
+
 .container {
   width: 980px;
   margin: 0 auto;
+}
+
+header {
+  text-align: center;
+}
+
+.score span{
+  padding: 1px;
+}
+
+.counter {
+  display: inline-block;
+  width: 2em;
+}
+
+header .reset {
+  margin-left: 10px;
+}
+
+#game {
+  width: 100%;
 }
 
 .cards {
@@ -25,9 +60,18 @@ ul {
   border-radius: 1em;
   margin: 15px;
   cursor: pointer;
+  color: #fff;
+  -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.62);
+  -moz-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.62);
+  box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.62);
 
   transform-style: preserve-3d;
   transition: all .3s linear;
+}
+
+.card i {
+  top: 50%;
+  font-size: 5em;
 }
 
 .face {
@@ -42,12 +86,121 @@ ul {
 }
 
 .card .front {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: purple;
   transform: rotateY(180deg);
   position: absolute;
 }
 
+.card.matched .front {
+  transition: color;
+  animation-delay: .3s;
+  background-color: #3AB0C3;
+}
+
 .card .back {
   background-color: #2F404B;
   position: absolute;
+}
+
+.modal {
+  width: 100%;
+  height: 200%;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  padding: 5%;
+}
+
+.modal .content {
+  padding: 10% 0;
+  font-size: 1.5em;
+}
+
+.button {
+  border: 1px solid #5181ed;
+  border-radius: 6px;
+  padding: 10px;
+  color: white;
+  background: linear-gradient(to top, #5181ed, #02ccba);
+}
+
+.hidden {
+  display: none;
+}
+
+/**
+ * This animation ideia was getted from animate.css library https://daneden.github.io/animate.css/
+ * and changed some configurations to fix the card rotation
+ */
+.animated {
+   -webkit-animation-duration:1s;
+   animation-duration:1s;
+   -webkit-animation-fill-mode:both;
+   animation-fill-mode:both
+}
+
+@-webkit-keyframes tada {
+    0% {
+        -webkit-transform:scaleX(1);
+        transform:scaleX(1) rotateY(180deg)
+    }
+    10%,20% {
+        -webkit-transform:scale3d(.9,.9,.9) rotate(-3deg);
+        transform:scale3d(.9,.9,.9) rotate(-3deg) rotateY(180deg)
+    }
+    30%,50%,70%,90% {
+        -webkit-transform:scale3d(1.1,1.1,1.1) rotate(3deg);
+        transform:scale3d(1.1,1.1,1.1) rotate(3deg) rotateY(180deg)
+    }
+    40%,60%,80% {
+        -webkit-transform:scale3d(1.1,1.1,1.1) rotate(-3deg);
+        transform:scale3d(1.1,1.1,1.1) rotate(-3deg) rotateY(180deg)
+    }
+    to {
+        -webkit-transform:scaleX(1);
+        transform:scaleX(1) rotateY(180deg)
+    }
+}
+@keyframes tada{
+    0%{
+        -webkit-transform:scaleX(1);
+        transform:scaleX(1) rotateY(180deg)
+    }
+    10%,20%{
+        -webkit-transform:scale3d(.9,.9,.9) rotate(-3deg);
+        transform:scale3d(.9,.9,.9) rotate(-3deg) rotateY(180deg)
+    }
+    30%,50%,70%,90%{
+        -webkit-transform:scale3d(1.1,1.1,1.1) rotate(3deg);
+        transform:scale3d(1.1,1.1,1.1) rotate(3deg) rotateY(180deg)
+    }
+    40%,60%,80%{
+        -webkit-transform:scale3d(1.1,1.1,1.1) rotate(-3deg);
+        transform:scale3d(1.1,1.1,1.1) rotate(-3deg) rotateY(180deg)
+    }
+    to{
+        -webkit-transform:scaleX(1);
+        transform:scaleX(1) rotateY(180deg)
+    }
+}
+.tada{
+    -webkit-animation-name:tada;
+    animation-name:tada
+}
+
+
+@media screen and (max-width: 1000px) and (min-width: 785px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media screen and (max-width: 784px) {
+  .container {
+    width: 520px;
+  }
 }
